--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kamermans/guzzle-oauth-subscriber",
+    "name": "kamermans/guzzle-oauth2-subscriber",
     "description": "OAuth 2.0 client for Guzzle 4, 5 and 6+",
     "keywords": ["oauth", "guzzle"],
     "license": "MIT",
@@ -10,21 +10,16 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
-            "kamermans\\OAuth2\\": "src/OAuth2"
+            "kamermans\\OAuth2\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "kamermans\\OAuth2\\Tests\\": "tests/OAuth2"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.1-dev"
+            "kamermans\\OAuth2\\Tests\\": "tests"
         }
     }
 }
