--- a/guzzle_environments/6/phpunit.xml.dist
+++ b/guzzle_environments/6/phpunit.xml.dist
@@ -4,6 +4,7 @@
     <testsuites>
         <testsuite name="All Tests">
             <directory>../../tests</directory>
+            <exclude>../../tests/OAuth2SubscriberTest.php</exclude>
         </testsuite>
     </testsuites>
     <filter>
