--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
     - 5.5
     - 5.6
     - 7.0
+    - 7.1
+    - hhvm
 
 install:
     - cd guzzle_environments/${GUZZLE_VERSION}
@@ -20,7 +22,13 @@ env:
 
 matrix:
     exclude:
+        - php: 5.4
+          env: GUZZLE_VERSION=6
         - php: 7.0
           env: GUZZLE_VERSION=4
         - php: 7.0
+          env: GUZZLE_VERSION=5
+        - php: 7.1
+          env: GUZZLE_VERSION=4
+        - php: 7.1
           env: GUZZLE_VERSION=5
