--- a/guzzle_environments/6/composer.json
+++ b/guzzle_environments/6/composer.json
@@ -9,7 +9,9 @@
     "require-dev": {
         "guzzlehttp/guzzle": "~6",
         "phpunit/phpunit": "~4.0",
-        "doctrine/cache": "~1.5"
+        "doctrine/cache": "~1.5",
+        "psr/simple-cache": "^1.0",
+        "symfony/cache": "^3.4"
     },
     "autoload": {
         "psr-4": {
