--- a/guzzle_environments/5/composer.json
+++ b/guzzle_environments/5/composer.json
@@ -9,9 +9,7 @@
     "require-dev": {
         "guzzlehttp/guzzle": "~5",
         "phpunit/phpunit": "~4.0",
-        "doctrine/cache": "~1.5",
-        "psr/simple-cache": "^1.0",
-        "symfony/cache": "^3.4"
+        "doctrine/cache": "~1.5"
     },
     "autoload": {
         "psr-4": {
