--- a/guzzle_environments/5/phpunit.xml.dist
+++ b/guzzle_environments/5/phpunit.xml.dist
@@ -5,6 +5,7 @@
         <testsuite name="All Tests">
             <directory>../../tests</directory>
             <exclude>../../tests/OAuth2MiddlewareTest.php</exclude>
+            <exclude>../../tests/Persistence/SimpleCacheTokenPersistence.php</exclude>
         </testsuite>
     </testsuites>
     <filter>
