--- a/guzzle_environments/5/phpunit.xml.dist
+++ b/guzzle_environments/5/phpunit.xml.dist
@@ -6,6 +6,7 @@
             <directory>../../tests</directory>
             <exclude>../../tests/OAuth2MiddlewareTest.php</exclude>
             <exclude>../../tests/Persistence/SimpleCacheTokenPersistenceTest.php</exclude>
+            <exclude>../../tests/Persistence/LaravelCacheTokenPersistenceTest.php</exclude>
         </testsuite>
     </testsuites>
     <filter>
