--- a/guzzle_environments/6/composer.json
+++ b/guzzle_environments/6/composer.json
@@ -11,7 +11,8 @@
         "phpunit/phpunit": "~4.0",
         "doctrine/cache": "~1.5",
         "psr/simple-cache": "^1.0",
-        "symfony/cache": "^3.4"
+        "symfony/cache": "^3.4",
+        "illuminate/cache": "^5.0"
     },
     "autoload": {
         "psr-4": {
