--- a/guzzle_environments/4/composer.json
+++ b/guzzle_environments/4/composer.json
@@ -8,7 +8,7 @@
     ],
     "require-dev": {
         "guzzlehttp/guzzle": "~4",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": ">=4",
         "doctrine/cache": "~1.5"
     },
     "autoload": {
