--- a/guzzle_environments/4/phpunit.xml.dist
+++ b/guzzle_environments/4/phpunit.xml.dist
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="./vendor/autoload.php"
+         beStrictAboutTestsThatDoNotTestAnything="false"
          colors="true">
     <testsuites>
         <testsuite name="All Tests">
