--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
     - 7.1
     - 7.2
     - 7.3
+    - 7.4
 
 install:
     - cd guzzle_environments/${GUZZLE_VERSION}
@@ -22,19 +23,30 @@ env:
     - GUZZLE_VERSION=4
     - GUZZLE_VERSION=5
     - GUZZLE_VERSION=6
+    - GUZZLE_VERSION=7
 
 matrix:
     exclude:
         - php: 5.4
           env: GUZZLE_VERSION=6
+        - php: 5.4
+          env: GUZZLE_VERSION=7
+        - php: 5.5
+          env: GUZZLE_VERSION=7
+        - php: 5.6
+          env: GUZZLE_VERSION=7
         - php: 7.0
           env: GUZZLE_VERSION=4
         - php: 7.0
           env: GUZZLE_VERSION=5
+        - php: 7.0
+          env: GUZZLE_VERSION=7
         - php: 7.1
           env: GUZZLE_VERSION=4
         - php: 7.1
           env: GUZZLE_VERSION=5
+        - php: 7.1
+          env: GUZZLE_VERSION=7
         - php: 7.2
           env: GUZZLE_VERSION=4
         - php: 7.2
