--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": ">=4.0"
+        "guzzlehttp/guzzle": "~4.0|~5.0|~6.0|~7.0"
     },
     "autoload": {
         "psr-4": {
