--- a/.travis.yml
+++ b/.travis.yml
@@ -58,3 +58,7 @@ matrix:
           env: GUZZLE_VERSION=4
         - php: 7.3
           env: GUZZLE_VERSION=5
+        - php: 7.4
+          env: GUZZLE_VERSION=4
+        - php: 7.4
+          env: GUZZLE_VERSION=5
