Fix test issues with phpunit 9 and php 8 and 8.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ php:
     - 7.2
     - 7.3
     - 7.4
+    - 8.0
+    - 8.1
 
 install:
     - cd guzzle_environments/${GUZZLE_VERSION}
@@ -61,4 +63,12 @@ matrix:
         - php: 7.4
           env: GUZZLE_VERSION=4
         - php: 7.4
+          env: GUZZLE_VERSION=5
+        - php: 8.0
+          env: GUZZLE_VERSION=4
+        - php: 8.0
+          env: GUZZLE_VERSION=5
+        - php: 8.1
+          env: GUZZLE_VERSION=4
+        - php: 8.1
           env: GUZZLE_VERSION=5
