--- a/guzzle_environments/6/composer.json
+++ b/guzzle_environments/6/composer.json
@@ -23,5 +23,10 @@
         "psr-4": {
             "kamermans\\OAuth2\\Tests\\": "../../tests"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
