fix: working directory for test

--- a/.github/workflows/phpunit-runner.yml
+++ b/.github/workflows/phpunit-runner.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Composer install
         # working-directory: guzzle_environments/7-php8
-        run: ls -la && composer install
+        run: ls -la ../ && composer install
       - name: PHPUnit
         # working-directory: guzzle_environments/7-php8
         run: vendor/bin/phpunit -vvvv
