--- a/.github/workflows/phpunit-runner.yml
+++ b/.github/workflows/phpunit-runner.yml
@@ -7,9 +7,10 @@ jobs:
     container:
       image: kamermans/composer:php8.1
     steps:
+      - uses: actions/checkout@v3
       - name: Composer install
-        # working-directory: guzzle_environments/7-php8
-        run: ls -la ../ && composer install
+        working-directory: guzzle_environments/7-php8
+        run: composer install
       - name: PHPUnit
-        # working-directory: guzzle_environments/7-php8
+        working-directory: guzzle_environments/7-php8
         run: vendor/bin/phpunit -vvvv
