--- a/.github/workflows/phpunit-runner.yml
+++ b/.github/workflows/phpunit-runner.yml
@@ -2,15 +2,33 @@ name: 'PHPUnit Runner'
 run-name: Run PHPUnit tests
 on: [push]
 jobs:
+  matrix-testing:
+    strategy:
+      matrix:
+        php: [5.6, 7.3, 7.4, 8.0, 8.1]
+        guzzle: [4, 5, 6, 7, 7-php8]
+        exclude:
+          - {php: 5.6, guzzle: 7}
+          - {php: 5.6, guzzle: 7-php8}
+          - {php: 7.3, guzzle: 4}
+          - {php: 7.3, guzzle: 5}
+          - {php: 7.3, guzzle: 7-php8}
+          - {php: 7.4, guzzle: 4}
+          - {php: 7.4, guzzle: 5}
+          - {php: 7.4, guzzle: 7-php8}
+          - {php: 8.0, guzzle: 4}
+          - {php: 8.0, guzzle: 5}
+          - {php: 8.1, guzzle: 4}
+          - {php: 8.1, guzzle: 5}
   guzzle7-php81:
     runs-on: ubuntu-latest
     container:
-      image: kamermans/composer:php8.1
+      image: kamermans/composer:php${{ matrix.php }}
     steps:
       - uses: actions/checkout@v3
       - name: Composer install
-        working-directory: guzzle_environments/7-php8
+        working-directory: guzzle_environments/${{ matrix.guzzle }}
         run: composer install
       - name: PHPUnit
-        working-directory: guzzle_environments/7-php8
+        working-directory: guzzle_environments/${{ matrix.guzzle }}
         run: vendor/bin/phpunit -vvvv
