--- a/.github/workflows/phpunit-runner.yml
+++ b/.github/workflows/phpunit-runner.yml
@@ -6,17 +6,13 @@ jobs:
     strategy:
       matrix:
         php: ["7.3", "7.4", "8.0", "8.1"]
-        guzzle: ["4", "5", "6", "7", "7-php8"]
+        guzzle: ["5", "6", "7", "7-php8"]
         exclude:
-          - {php: "7.3", guzzle: "4"}
           - {php: "7.3", guzzle: "5"}
           - {php: "7.3", guzzle: "7-php8"}
-          - {php: "7.4", guzzle: "4"}
           - {php: "7.4", guzzle: "5"}
           - {php: "7.4", guzzle: "7-php8"}
-          - {php: "8.0", guzzle: "4"}
           - {php: "8.0", guzzle: "5"}
-          - {php: "8.1", guzzle: "4"}
           - {php: "8.1", guzzle: "5"}
     runs-on: ubuntu-latest
     container:
