--- a/.github/workflows/phpunit-runner.yml
+++ b/.github/workflows/phpunit-runner.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: guzzle_environments/${{ matrix.guzzle }}
-          key: ${{ runner.os }}-build-php${{ matrix.php }}-guzzle${{ matrix.guzzle }}-composer-${{ hashFiles('guzzle_environments/${{ matrix.guzzle }}/composer.json') }}
+          key: ${{ runner.os }}-build-php${{ matrix.php }}-guzzle${{ matrix.guzzle }}-composer-${{ hashFiles('guzzle_environments/**/composer.json') }}
       - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         name: Composer install
         working-directory: guzzle_environments/${{ matrix.guzzle }}
